[package]
name = "iota-p2p-poc"
version = "0.1.0"
authors = ["Elena Frank <elena.frank@iota.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
async-std = "1.6.2"
async-trait = "0.1.40"
bytes = "0.5.6"
futures = "0.3.1"
futures_codec = "0.4"
libp2p = "0.28.1"
prost = "0.6.1"
unsigned-varint = { version = "0.4", features = ["futures-codec"] }

[build-dependencies]
prost-build = "0.6.1"

[features]
server = []